--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,39 @@
-# --- Dependencies ---
+# --- Dependencies (Thư viện) ---
 node_modules/
 package-lock.json
 yarn.lock
 
-# --- Sensitive Data (Tuyệt đối không up) ---
-appstate_letan.json
-cookie.json
+# --- Sensitive Data (Tuyệt đối không đẩy lên GitHub) ---
 config.json
+appstate.json
+fca-config.json
+cookie.json
+appstate_letan.json
 .env
 
-# --- Cache & Media (Rác) ---
+# --- Cache & Database (Dữ liệu cục bộ) ---
+Fca_Database/
 cache/
 assets/tmp/
+*.sqlite
+
+# --- Media Files (File rác khi bot tải về) ---
 *.mp4
 *.mp3
 *.jpg
+*.jpeg
 *.png
+*.gif
 
-# --- Logs ---
+# --- Logs (Nhật ký lỗi) ---
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 logs/
 *.log
 
-# --- System Files ---
+# --- System Files (File hệ thống) ---
 .DS_Store
 Thumbs.db
 .idea/
 .vscode/
-
-# --- Others ---
-test_dis.js
-temp/
